config.json: updated address in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -81,7 +81,7 @@
             "phoneAltText": "My phone number",
             "email": "freezerpardon@gmail.com",
             "emailAltText": "My email",
-            "address": "312 Lovely Street, Brooklyn, NY, 123456",
+            "address": "312 Lonely Street, Lavingware, Nairobi, 12-56",
             "addressAltText": "My address"
         },
         "copyrightText": "Powered by [Netlify](https://www.netlify.com/)",
